  * debian/patches:
    + Added surf_0.4.1_mkdir_fix.patch provided by Anslem Grabe to fix the
      ~/.surf directory permission even if the directory already exists also
      patch makes the cookies.txt only user readable.
    + Removed fix-insecure-permission.patch as the new patch contains the all
      the changes which was there in this patch.
    + Removed debian-changes-0.4.1-3 patch

 -- Vasudev Kamath <kamathvasudev@gmail.com>  Sun, 12 Feb 2012 17:56:02 +0530

surf (0.4.1-6) unstable; urgency=high

  * QA upload.
  * debian/patches:
    + Added fix-insecure-permissions.patch to fix world readable cookie jar
      vulnerability CVE-2012-0842. (Closes: #659296)

 -- Vasudev Kamath <kamathvasudev@gmail.com>  Sat, 11 Feb 2012 00:01:08 +0530

surf (0.4.1-5) unstable; urgency=low

  * QA upload.
  * Added Debian QA Group as maintainer for package.
  * debian/control:
    + Bumped Standards-Version to 3.9.2. This did not require any change to
      the package source.
    + Vcs-* fields now point to collab-maint repository
    + Added Build-Depends: on dpkg-dev (>= 1.16.1) to introduce dpkg-buildflags
    + In Build-Depends: renamed libwebkit-dev to libwebkitgtk-dev
      (Closes: #635427)
    + Added pkg-config to Build-Depends as config.mk is using it.
  * debian/watch:
    + Introduced watch file
  * debian/surf.postinst:
    + Reduced the update-alternative priority to 30 (Closes: #657646)
  * debian/patches:
    + Added dpkg-buildflags.patch to config.mk to make it honour {C,CPP,LD}FLAGS
      environment variables
    + Added DEP3 header to X11.diff
  * debian/rules:
    + Export {C,CPP,LD}FLAGS environment variables for introducing
      dpkg-buildflags

 -- Vasudev Kamath <kamathvasudev@gmail.com>  Thu, 02 Feb 2012 22:09:57 +0530

surf (0.4.1-4.1) unstable; urgency=low

  * Non-maintainer upload.
  * debian/patches/X11.diff: Added.  Fixed FTBFS.  Closes: #615780.

 -- Bart Martens <bartm@debian.org>  Sun, 02 Oct 2011 20:08:59 +0200
