@@ -10,8 +10,10 @@ surf (0.4.1-7) unstable; urgency=low
     + Removed fix-insecure-permission.patch as the new patch contains the all
       the changes which was there in this patch.
     + Removed debian-changes-0.4.1-3 patch
+  * debian/rules:
+    + Overriden the dh_clean to remove config.h created by Makefile during build
 
- -- Vasudev Kamath <kamathvasudev@gmail.com>  Sun, 12 Feb 2012 17:56:02 +0530
+ -- Vasudev Kamath <kamathvasudev@gmail.com>  Mon, 13 Feb 2012 22:33:17 +0530
 
 surf (0.4.1-6) unstable; urgency=high
 
